--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start": "tsc && node ./dist/index.js",
+    "start": "tsc && node ./dist/deploy.commands.js && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,6 +16,7 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "eslint": "^8.26.0"
   }
 }
